# raspberry-temperature-monitoring

./: Cargo.toml  README.md  deploy.sh  monitoring.service
src/: main.rs
