[package]
name = "monitoring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive", "env"] }
dht22_pi = "1.0.0"
env_logger = "0.10.0"
futures = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
tokio = { version = "1.24.1", features = ["rt-multi-thread", "macros"] }
